--- a/Activity Tracker.html
+++ b/Activity Tracker.html
@@ -6,6 +6,7 @@
 <h1> Activity Tracker </h1>
 
 <h1> he </h1>
+<h1> Second Test </h2>
 
 <textarea id="Activity" rows="4" cols="50" placeholder="Enter text here...">
 </textarea>
