--- a/Activity Tracker.html
+++ b/Activity Tracker.html
@@ -3,10 +3,7 @@
 <title> Activity Tracker </title>
 <head>
 <body>
-<h1> Activity Tracker </h1>
-
-<h1> he </h1>
-<h1> Second Test </h2>
+<h1> Time Logger App </h1>
 
 <textarea id="Activity" rows="4" cols="50" placeholder="Enter text here...">
 </textarea>
